# klarenz

./: .gitignore  ChangeLog  README.md  __init__.py  _test.py  bridge  kodou.markdown  kodou.py  main.py  mkdocs.yml  prebuild.py  pyproject.toml  setup.py  start_page.markdown  test.py  todo
docs/: about_time.md  documentation.md  index.md
docs/examples/: amani.md  bartok.md  bartok.py  mozart.md  mozart.py  sine_melody.md  sine_melody.py
src/: __init__.py  classes.py  const.py  constants.py  igor.py  klarenz.py  ly.py  main.py  pitch.py  process.py  rhythm.py
src/bridge/: midi_bridge.py
src/klarenz/: __init__.py  cfg.py  classes.py  const.py  copyr.py  helper.py  ly.py  main.py  misc.py  process.py  rhythm.py  version.py
src/klarenz/test/: igor.py  test_tie.py
tests/: cmajor.py  test_tie.py
